# MachineLearningPython

./: pyproject.toml  requirements.txt
code/: c1_w1_linear_regression.py
notebooks/: C1_W1_Lab01_Python_Jupyter_Soln.ipynb  C1_W1_Lab02_Model_Representation_Soln.ipynb
notes/: get_started.md  poetry.md
