[tool.poetry]
name = "machinelearningpython"
version = "0.1.0"
description = "Learning ML using python"
authors = ["Nikhil Bhirud <12810336+nbhirud@users.noreply.github.com>"]
license = "GPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pip = "^23.3.1"
jupyterlab = "^4.0.11"
pandas = "^2.1.3"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
black = "^23.11.0"
isort = "^5.12.0"
pytest = "^7.4.3"
mypy = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
